assets/css/style.css
*,
*::after,
*::before{
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}
body{
  font-family: 'Rubik', sans-serif;
  background-color: var(--black);
  color: white;
  line-height: 1.5;
}
:root{
  --black: #020403;
  --gray: #adadad;
  --titlePhone: 40px;
  --titleDesktop: 55px;
  --subtitlePhone: 25px;
  --subtitleDesktop: 35px;
  --subsectionPhone: 18px;
  --subsectionDesktop: 30px;
  --bodyPhone: 16px;
  --bodyDesktop: 20px;
}
@media (min-width: 320px) {
  img{
    height: 100%;
  }
  a{
    text-decoration: none;
  }
  nav{
    display: flex;
    align-items: center;
    justify-content: right;
    min-height: 50px;
    width: 100%;
    padding-right: 2%;
    background: var(--black);
    position: sticky;
    top:0;
  }
  .nav__menu{
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--gray);
    position: fixed;
    top: 50px;
    width: 100%;
    padding: 20px 0;
    height: 100%;
    overflow-y: auto;
    right: 100%;
    transition: 1s;
  }
  .nav__menu__visible{
    right: 0;
  }
  nav button{
    color: white;
    background: none;
    border: none;
    font-size: 30px;
  }
  nav button i:hover{
    font-size: 35px;
  }
  nav a{
    font-size: var(--bodyPhone);
    font-family:'Rubik', 'Regular';
    color: white;
    line-height: 60px;
  }
  nav a:hover{
    color: var(--black);
    font-size: 20px;
  }
  h1{
    font-size: var(--titlePhone);
    width: 400px;
    text-align: center;
  }
  header{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding-top: 50px;
  }
  header>h3{
    color: var(--gray);
  }
  header img{
    width: 200px;
    border-radius: 30%;
  }
  header i{
    font-size: 50px;
  }
  header a{
    color: white;
  }
  header a:hover{
    color: var(--gray);
  }
  h2{
    color: white;
    font-size: var(--subtitlePhone);
    min-height: 50px;
  }
  p{
    color: var(--gray);
    font-size: var(--bodyPhone);
  }
  .about{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 40px;
    padding-top: 50px;
  }
  .about p{
    width: 80%;
    text-align: center;
  }
  .skill{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 40px;
    padding-top: 50px;
  }
  .skill__items{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 80%;
  }
  .skill__items>div{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 25px;
  }
  .skill p{
    width: 80%;
    text-align: center;
    color: white;
  }
  .skill i{
    font-size: 80px;
  }
  .experience{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 40px;
    padding-top: 50px;
  }
  .experience>div{
    display: flex;
    width: 75%;
    justify-content: flex-start;
    align-items: center;
    gap: 37.5%;
  }
  .experience hr{
    width: 75%;
  }
  .job{
    color: white;
  }
  .portfolio{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 40px;
    padding-top: 50px;
  }
  .portfolio__img{
    display: flex;
    gap: 10px;
    flex-direction: column;
    justify-content: center;
  }
  footer{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 40px;
    padding-top: 50px;
  }
  footer p{
    text-align: center;
  }
  footer>div{
    display: flex;
    gap: 5%;
  }
  footer i{
    font-size: 100px;
  }
  .whatsapp{
    margin-left: 15%;
  }
  .footer__info{
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
  }
  .footer__text{
    opacity: 80%;
  }
  .footer__email{
    max-width: 400px;
  }
  footer a{
    color: white;
  }
  footer a:hover{
    color: var(--gray);
  }
}
@media (min-width: 768px){
  h2{
    margin-top: 90px
  }
  nav{
    min-height: 10px;
    width: 100%;
    position: sticky;
    top: 0;
    background: var(--black);
  } 
  .nav__menu{
    display: flex;
    flex-direction: row;
    gap: 15px;
    height: 100px;
    width: 100%;
    align-items: center;
    justify-content: center;
    padding-left: 20%;
    background: var(--black);
    top: 0px;
  }
  nav button{
    display: none;
  }
  nav a{
    line-height: 1.5;
  }
  nav a:hover{
    color: var(--gray);
  }
  header{
    margin-top: 120px;
  }
  .skill__items{
    width: 50%;
    display: flex;
    justify-content: center;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 50%;
  }
  .skill__items i{
    font-size: 80px;
  }
}
@media (min-width: 992px){
  .nav__menu{
    gap: 30px;
  }
  .nav__menu a{
    font-size: var(--bodyDesktop);
  }
  nav a:hover{
    font-size: 24px;
  }
  header{
    display: flex;
    gap: 10px;
  }
  header img{
    width: 300px;
  }
  header h1{
    font-size: var(--titleDesktop);
    width: 600px;
  }
  header h3{
    font-size: var(--subsectionDesktop);
  }
  header div{
    display: flex;
    gap: 50px;
  }
  header i{
    font-size: 80px;
  }
  h2{
    color: white;
    font-size: var(--subtitleDesktop);
    min-height: 50px;
  }
  p{
    color: var(--gray);
    font-size: var(--bodyDesktop);
  }
  .skill__items{
    width: 45%;
  }
  .skill__items i{
    font-size: 110px
  }
  .portfolio__img{
    width: 80%;
    display: flex;
    flex-direction: row;
  }
  .portfolio__img img{
    width: 33%;
  }
  
}

